Minor alignment fixes for project cards

--- a/src/styles/.partials/Projects/Card/card_base.scss
+++ b/src/styles/.partials/Projects/Card/card_base.scss
@@ -22,8 +22,9 @@
 
         &.Project1 {
             img {
-                max-width: 100%;
-                max-height: 100%;
+                height: 100%;
+                width: 100%;
+                object-fit: contain;
             }
         }
     }
