--- a/src/styles/.partials/Projects/dark.scss
+++ b/src/styles/.partials/Projects/dark.scss
@@ -8,7 +8,7 @@
         }
 
         .Card {
-            background: map-get($dark_theme, "dark_2");
+            background: map-get($dark_theme, "dark");
             box-shadow: 0 0 0 0 #000000;
 
             .CardDetails {
